Change margin styling to fix scrollbar and remove test lines
using padding and not width so scroll bar aligns with edge of screen

removed some lines I accidentally committed

--- a/src/app/view-study-set/_view-study-set-theme.scss
+++ b/src/app/view-study-set/_view-study-set-theme.scss
@@ -14,7 +14,8 @@
 
   #description{
     font: mat.get-theme-typography($theme, body-large);
-    padding: var(--padding-small) 0px;
+    padding-top: var(--padding-small);
+    padding-bottom: var(--padding-small);
   }
 
   .active-seq {
