--- a/src/assets/styles/_margins.scss
+++ b/src/assets/styles/_margins.scss
@@ -7,7 +7,6 @@
 
 .outer-margin {
   margin: auto;
-  width: 92%;
-  padding-left: var(--padding-large);
-  padding-right: var(--padding-large);
+  padding-left: calc(var(--padding-large) + 2vw);
+  padding-right: calc(var(--padding-large) + 2vw);
 }
